
 - Tilde-expansion is now performed on arguments passed to a
   compatibility-Makefile.PL [Spotted by Sam Vilain]

 - We now run the 'gzip' and 'tar' values through split_like_shell()
   when running the 'dist' action, so that e.g. the 'gzip' value can
   be set to something like "gzip -f --best" and it'll work
   correctly. [Spotted by Chris Dolan]

0.2607 (Bug fix release in 0.26 series)  Sat Dec 18 14:14:09 CST 2004

 - Instead of freezing @INC in the 'Build' script to the value it had
   when Build.PL was run, we now just add those additional values that
   aren't part of the default compiled-in @INC. [Michael Schwern]

 - The run_perl_script() method will now propagate any extra entries
   in @INC (such as those added by "use lib" or the -I command-line
   switch) to the subprocess.  This helps situations in which you want
   to tell the subprocess where to find a certain module, for
   instance.  [Michael Schwern]

0.2606 (Bug fix release in 0.26 series)   Tue Dec  7 22:33:11 CST 2004

 - Fixed a linking bug on Win32, in which compiled C code object files
   never got linked in with the modules being built. [Dominic
   Mitchell]

 - Fixed a bug in the new_from_context() method in which any arguments
   passed made us die. [Spotted by Jos Boumans]

0.2605 (Bug fix release in 0.26 series)   Tue Nov 30 07:16:13 CST 2004

 - Fixed a bug in which zero-length arguments for hash-valued
   parameters (e.g. " --config foo= ") weren't being allowed.

 - The tests now play better with environments in which version.pm is
   pre-loaded, like in bleadperl. [John Peacock & Michael Schwern]

 - Fixed a syntax error in one of the tests under perl 5.005.

0.2604 (Bug fix release in 0.26 series)   Wed Nov 17 14:32:42 CST 2004

 - Fixed a split_like_shell() bug introduced in 0.2603 for Windows, in
   which an array reference passed as an argument was returned as an
   array reference, rather than as a list. [Spotted by Steve Hay]
